# srtc-android-demo

./: .clang-format  .gitignore  .gitmodules  README.md  build.gradle.kts  gen_ivs_token.sh  new_ivs_token.sh  new_pion_token.sh  new_token.sh  proguard-rules.pro  release.keystore  run_publish.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/kman/srtctest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/kman/srtctest/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
dtls-test/: dtls-test.c  run.sh
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pion-webrtc-examples-whip-whep/: go.mod  main.go  run.sh
publish/: publish.html
src/main/: AndroidManifest.xml
src/main/cpp/: .clang-format  CMakeLists.txt  jni_class_map.cpp  jni_class_map.h  jni_error.cpp  jni_error.h  jni_package.h  jni_peer_connection.cpp  jni_peer_connection.h  jni_util.cpp  jni_util.h  srtctest_main.cpp
src/main/java/org/kman/srtctest/: HttpClient.kt  MainActivity.kt  MyLog.kt  RenderThread.kt  Util.kt
src/main/java/org/kman/srtctest/rtc/: PeerConnection.java  RtcException.java  SRtcException.java  SimulcastLayer.java  Track.java
src/main/java/org/kman/srtctest/util/: MyLog.kt
src/main/res/layout/: main_activity.xml
src/main/res/raw/: pub_offer_1.txt  pub_offer_chrome_av.txt  pub_offer_chrome_av_smaller.txt  pub_offer_chrome_v_only.txt  shader_f.txt  shader_v.txt
src/main/res/values/: strings.xml  themes.xml
src/test/java/org/kman/srtctest/: ExampleUnitTest.kt
